[package]
name = "columned"
version = "0.5.0"
edition = "2024"
readme = "README.md"
keywords = ["unsafe", "alloc"]
license = "MIT"
categories = ["memory-management"]
repository = "https://github.com/Andful/Columned"
description = "A single, contiguous, allocation for multiple arrays"
documentation = "https://docs.rs/columned"

[dependencies]

[dev-dependencies]
rand = "0.10.2"


